fix: overflow-y content cant be changable and thus now redo the steps to make the best possible.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,12 +23,11 @@
 /* selection */
 
 html {
-  scroll-behavior: hidden;
+  scroll-behavior: smooth;
 }
 body {
-  overflow: hidden;
-
   overflow-x: hidden;
+  overflow-y: auto;
   font-family: var(--primary_font-family);
 }
 section {
@@ -187,7 +186,7 @@ p {
 .preloader-content {
   max-width: 80%; /* Adjust the max-width according to your content */
   max-height: 80%; /* Adjust the max-height according to your content */
-  overflow: hidden; /* Enable scrolling if content exceeds dimensions */
+  overflow: auto; /* Enable scrolling if content exceeds dimensions */
   color: #fff; /* Set text color */
 }
 /* Preloader End */
@@ -549,7 +548,7 @@ body .d2c_mobile_view {
   transition: 0.5s;
   padding: 20px 15px;
   background-color: #1b2130;
-  overflow: hidden;
+  overflow: scroll;
   z-index: 9999;
   box-shadow: 0px 0px 10px rgb(0 0 0 / 15%);
 }
@@ -568,7 +567,7 @@ body .d2c_mobile_view {
   transition: 0.5s !important;
   padding: 20px 15px;
   background-color: #021616;
-  overflow: hidden;
+  overflow: scroll;
   z-index: 9999;
 }
 .navbar-toggler:focus {
